Fixes Issues with nav bar on smaller monitors

--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,7 @@ header {
   font-size: 30px;
   font-weight: var(--font-weight-header);
   opacity: 0;
+  transform: translateY(50px);
   animation: scrollInfoIn 200ms ease-in-out 2.7s;
   animation-fill-mode: forwards;
 }
@@ -138,16 +139,20 @@ section#discord-theme {
 @-webkit-keyframes scrollInfoIn {
   from {
     opacity: 0;
+    transform: translateY(50px);
   }
   to {
     opacity: 1;
+    transform: translateY(0);
   }
 }
 @keyframes scrollInfoIn {
   from {
     opacity: 0;
+    transform: translateY(50px);
   }
   to {
     opacity: 1;
+    transform: translateY(0);
   }
 }
