--- a/css/nav.css
+++ b/css/nav.css
@@ -52,12 +52,11 @@ nav .homeBar {
 }
 
 nav .homeBar a {
-  padding: 0 4%;
   height: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
   background-color: var(--background);
-  z-index: 999;
   pointer-events: auto;
 }
 
